--- a/templates/broker.template.yaml
+++ b/templates/broker.template.yaml
@@ -127,6 +127,11 @@ objects:
       - syndesises/finalizers
       verbs: ["create", "delete", "deletecollection", "get", "list", "update", "watch"]
     - apiGroups:
+      - integreatly.org
+      resources:
+      - managedservicenamespaces
+      verbs: ["list", "update"]
+    - apiGroups:
       - ""
       resources:
       - configmaps
